Course activation preliminary - PMT #105457
CourseActivateView basics

Renamed `LoggedInMixin` to `LoggedInCourseMixin`. `LoggedInMixin` is now
a simple check to see if the user is logged in - doesn't rely on course
stuff.

The ActivatableAffil model stores affiliations that the user may want to
activate into a Mediathread course. There are checks in auth.py to see
if the user is a faculty-member of this affiliation, if the date makes
sense, etc. I'll fine-tune these conditions as we go.

There's a simple course-activation form that's not functional yet.

I've introduced MethCourseManagerMiddleware that forwards the user to
this new 'homepage' instead of the old one, if the waffle flag is
active for them.

--- a/mediathread/templates/main/homepage.html
+++ b/mediathread/templates/main/homepage.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load coursetags %}
 {% load static %}
+{% load waffle_tags %}
 
 {% block title %}&mdash; Homepage{% endblock %}
 
@@ -37,6 +38,7 @@
 {% endblock %}
 
 {% block content %}
+    {% flag 'instructor_homepage' %}
     <div id="course-list">
         <div id="coursefilter">
             <span class="h5">View courses for:</span>
@@ -91,6 +93,22 @@
         No courses match this criteria.
     {% endif %}
 
+    {% if activatable_affils|length > 0 %}
+        <h2>Activatable Courses</h2>
+        <ul>
+            {% for affil in activatable_affils %}
+                <li>
+                    {{affil.name}}
+                    <a class="btn btn-default btn-xs"
+                       href="{% url 'affil_activate' affil.id %}" role="button"
+                    >Activate</a>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     </div>
+    {% else %}
+    The instructor_homepage flag isn't enabled for this user.
+    {% endflag %}
 
 {% endblock %}
