Automatically update host_url on extension install - PMT #105479
Also, it looks like the extension id was incorrect, so I had to update
it. It's possible that google changed this.

--- a/mediathread/templates/assetmgr/install_chrome_extension.html
+++ b/mediathread/templates/assetmgr/install_chrome_extension.html
@@ -46,6 +46,21 @@
                 function() {
                     // Success handler
                     markAsInstalled($button);
+
+                    var extensionId = 'gambcgmmppeklfmbahomokogelnaffbi';
+
+                    chrome.runtime.sendMessage(
+                        extensionId, {
+                            command: 'updatesettings'
+                        }, function(response) {
+                            var $el = jQuery('.update-chrome-extension-feedback');
+                            var defaultResponse = 'Settings updated.';
+                            var msg = response ? response : defaultResponse;
+
+                            $el.hide();
+                            $el.text(msg);
+                            $el.fadeIn();
+                        });
                 }
             );
         });
