--- a/mediathread/templates/main/homepage.html
+++ b/mediathread/templates/main/homepage.html
@@ -52,6 +52,10 @@
                    href="?semester_view=current"
                    class="btn btn-default {% if semester_view == 'current' %}active{% endif %}"
                 >Current Courses</a>
+                <a id="future_semesters"
+                   href="?semester_view=future"
+                   class="btn btn-default {% if semester_view == 'future' %}active{% endif %}"
+                >Future Courses</a>
             </div>
         </div>
     </div>
@@ -91,6 +95,27 @@
         </table>
     {% else %}
         No courses match this criteria.
+    {% endif %}
+
+    {% if infoless_courses %}
+        <h2>Sandboxes</h2>
+        <table class="table course-choices tablesorter course-sandboxes">
+            <thead>
+                <tr>
+                    <th>Course Title</th>
+                    <th>Instructor</th>
+                    <th>Role</th>
+                    {% if add_privilege %}
+                        <th class="nosort">Actions</th>
+                    {% endif %}
+                </tr>
+            </thead>
+            <tbody>
+                {% for course in infoless_courses %}
+                    {% include 'courseaffils/course_row.html' %}
+                {% endfor %}
+            </tbody>
+        </table>
     {% endif %}
 
     {% if activatable_affils|length > 0 %}
