autofocus search field on homepage

--- a/mediathread/templates/main/homepage.html
+++ b/mediathread/templates/main/homepage.html
@@ -61,6 +61,7 @@
         <input class="course-search search-box form-control"
                type="search"
                data-column="all"
+               autofocus
                placeholder="Search">
     </form>
 
