Superuser non-course members: return valid but empty context jshint/jscs

--- a/media/templates/homepage.mustache
+++ b/media/templates/homepage.mustache
@@ -112,11 +112,9 @@
                     <div class="column-contents">
                         <div id="project_table">
                             {{^compositions}}
-                            {{^showing_my_items}}
                                 <div class="homepage-column-info">
                                     No published work available.
                                 </div>
-                            {{/showing_my_items}}
                             {{/compositions}}
 
                             {{#compositions}}
@@ -206,14 +204,15 @@
                                         </a>
 
                                         {{#editable}}
-                                        <a title="Delete this Composition"
+                                        <a title="Delete {{title}}"
+                                           href="/project/delete/{{id}}/"
+                                           class="delete-project" data-container-id="project-{{id}}"
                                             {{#display_as_assignment}}
-                                                onclick="return ajaxDelete(this, 'project-{{id}}', { object_type: 'assignment' });"
+                                                data-object-type="assignment"
                                             {{/display_as_assignment}}
                                             {{^display_as_assignment}}
-                                                onclick="return ajaxDelete(this, 'project-{{id}}', { object_type: 'composition' });"
-                                            {{/display_as_assignment}}"
-                                            href="/project/delete/{{id}}/">
+                                                data-object-type="composition"
+                                            {{/display_as_assignment}}">
                                             <img src="/media/img/icons/meth_delete.png"
                                             width="25" height="25"
                                             class="delete_icon" alt="Delete" />
@@ -248,11 +247,9 @@
                                                 {{#editable}}
                                                 {{^submitted}}
                                                 <a href="/project/delete/{{id}}/"
-                                                   onclick="return ajaxDelete(this,
-                                                           'project-{{id}}',
-                                                           {'object_type': 'assignment response',
-                                                           'success': function() { jQuery(window).trigger('projectlist.refresh'); }
-                                                           });"
+                                                   class="delete-project"
+                                                   data-container-id="project-{{id}}"
+                                                   data-object-type="assignment_response"
                                                    title="Delete My Response">
                                                     <img src="/media/img/icons/meth_delete.png"
                                                         class="delete_icon" alt="Delete"
