Add Course Activation email functionality - PMT #105457
Also: courseworks / coursedirectory formats for course string.
I'll eventually factor this functionality out to `courseworks.columbia`.

--- a/mediathread/templates/main/course_activate.html
+++ b/mediathread/templates/main/course_activate.html
@@ -6,7 +6,7 @@
 {% block content %}
     <form action="." method="post" class="form col-md-6">
         {% csrf_token %}
-        <h1>Course Activation: {{affil.name}}</h1>
+        <h1>Course Activation: {{affil.coursedirectory_name}}</h1>
         {% bootstrap_form form %}
         {% buttons submit='Submit' %}{% endbuttons %}
     </form>
