selection assignment selenium tests

--- a/media/templates/asset_annotation_current.mustache
+++ b/media/templates/asset_annotation_current.mustache
@@ -91,7 +91,7 @@
             <input type="hidden" name="annotation-range2" value="{{range2}}" />
             <input type="hidden" name="annotation-annotation_data" value="{{annotation_data}}" />
 
-            <input class="btn btn-primary right" type="button" name="Save" value="Save"
+            <input class="btn btn-primary right" type="button" name="Save" value="Save Selection"
             onclick="javascript:annotationList.saveAnnotation(this)" />
 
             <input class="btn btn-primary right" type="button" name="Cancel" value="Cancel"
