--- a/media/templates/asset_global_annotation.mustache
+++ b/media/templates/asset_global_annotation.mustache
@@ -133,7 +133,7 @@
   {{/asset-current}}
 
   <input class="btn btn-primary right"
-  type="submit" name="submit_notes" value="Save"
+  type="submit" name="submit_notes" value="Save Item"
   onclick="return annotationList.saveItem(this)" />
 
   <input class="btn btn-primary right"
