--- a/mediathread/templates/registration/invitation_activate_form.html
+++ b/mediathread/templates/registration/invitation_activate_form.html
@@ -6,13 +6,14 @@
 <style>
     .register-form {
         width: 600px;
-        margin: 20px 20px;
+        margin: 0px 20px;
      }
 
     .register-form h2 {
         padding: 10px 0;
         border-bottom: solid 1px #EFEFEF;
         width: 100%;
+        margin-top: 0px;
     }
 
     .register-form form {
@@ -29,9 +30,7 @@
         margin: 0 10px 0 0;
     }
     .register-form input[name='title'],
-    .register-form input[name='institution'],
-    .register-form input[name='username'],
-    .register-form input[name='email'] {
+    .register-form input[name='username'] {
         width: 45%;
     }
     .small {
@@ -60,120 +59,79 @@
 {% endblock %}
 
 {% block content %}
-<form method="post" action="." class="register-form">
 
-    <h2 class="pagetitle signuptitle">Sign up for an account</h2>
-    <div><p>
-    If you already have a username or password, but have forgotten either,
-        <a href="{% url "password_reset" %}">reset them here</a>.
-    </p></div>
-    <div><p>
-    If you are a Columbia University student or faculty member with a UNI, please <b>do not</b> create a guest account. Instead,
-        <a href="/">login here</a>.
-    </p></div>
+{% if invite.is_activated %}
+    <h2 class="pagetitle signuptitle">Register for {{invite.course.title}}</h2>
+    <p>This invitation has already been activated</p>
+    <p>Log in to <a href="/">Mediathread</a></p>
+{% else %}
+    <form method="post" action="." class="register-form">
+        <h2 class="pagetitle signuptitle">Register for {{invite.course.title}}</h2>
+        <br />
+        <p>Your instructor has invited you to join {{invite.course.title}}. Please create a username and password for the Mediathread applicaton.</p>
+        <br />
 
-    {% if form.errors|length %}
-        <div class="alert alert-danger">
-          <strong>Please correct errors before continuing</strong><br /><br />
-          {% if form.non_field_errors %}
-            <div>{{ form.non_field_errors}}</div>
-          {% endif %}
+        {% if form.errors|length %}
+            <div class="alert alert-danger">
+              <strong>Please correct errors before continuing</strong><br /><br />
+              {% if form.non_field_errors %}
+                <div>{{ form.non_field_errors}}</div>
+              {% endif %}
+            </div>
+        {% endif %}
+    
+        <div class="form-group {% if form.first_name.errors or form.last_name.errors %}has-error{% endif %}">
+            <label for="id_first_name"><b>Your name is:</b></label>
+            <div>
+                <span>
+                    <input class="form-control" id="id_first_name" maxlength="50" name="first_name" type="text"
+                     value="{{form.data.first_name}}" placeholder="First Name">
+                </span>&nbsp;
+                <span>
+                    <input class="form-control" id="id_last_name" maxlength="50" name="last_name"
+                     value="{{form.data.last_name}}"
+                     type="text" placeholder="Last Name">
+                </span>
+                {% if form.first_name.errors or form.last_name.errors %}
+                    <ul class="errorlist">
+                        <li>First and last name are required.</li>
+                    </ul>
+                {% endif %}
+            </div>
         </div>
-    {% endif %}
-
-    <div class="form-group {% if form.first_name.errors or form.last_name.errors %}has-error{% endif %}">
-        <label for="id_first_name"><b>Your name is:</b></label>
-        <div>
-            <span>
-                <input class="form-control" id="id_first_name" maxlength="50" name="first_name" type="text"
-                 value="{{form.data.first_name}}" placeholder="First Name">
-            </span>&nbsp;
-            <span>
-                <input class="form-control" id="id_last_name" maxlength="50" name="last_name"
-                 value="{{form.data.last_name}}"
-                 type="text" placeholder="Last Name">
-            </span>
-            {% if form.first_name.errors or form.last_name.errors %}
+        <br />
+        <div class="form-group {% if form.username.errors %}has-error{% endif %}" >
+            <label>Username:</label>
+            <div>
+                {{ form.username }}
+                {% if not form.username.errors %}
+                    <div class="small">30 characters or fewer.<br /> Usernames may contain alphanumeric, _, @, +, . and - characters.</div>
+                {% endif %}
+            </div>
+            {{ form.username.errors }}
+        </div>
+        <br />
+        <div class="form-group {% if form.password1.errors or form.password2.errors %}has-error{% endif %}">
+            <label>Create a password:</label>
+            <div>
+                <span>
+                    {{ form.password1 }}
+                </span>&nbsp;
+                <span>
+                    {{ form.password2 }}
+                </span>
+            </div>
+            {% if form.password1.errors or form.password2.errors %}
                 <ul class="errorlist">
-                    <li>First and last name are required.</li>
+                    <li>Please enter your password twice. Passwords must match.</li>
                 </ul>
             {% endif %}
         </div>
-    </div>
-
-    <div class="form-group">
-        <label class="optional">Your title or role:</label>
-        <div>
-            {{ form.title }}
+    
+        <div style="text-align: center">
+        <input class="btn btn-primary btn-large right" type="submit"
+         id="submit-id" value="{% trans 'Register!' %}" />
         </div>
-    </div>
-
-    <div class="form-group {% if form.institution.errors %}has-error{% endif %}">
-        <label>Your institution:</label>
-        <div class="controls">
-            {{ form.institution }}
-            <div class="small">Please enter your affiliated institution or "Self".</div>
-        </div>
-        {% if form.institution.errors %}
-            <br/>{{ form.institution.errors }}
-        {% endif %}
-    </div>
-
-    <div class="form-group {% if form.username.errors %}has-error{% endif %}" >
-        <label>Username:</label>
-        <div>
-            {{ form.username }}
-            {% if not form.username.errors %}
-                <div class="small">30 characters or fewer.<br /> Usernames may contain alphanumeric, _, @, +, . and - characters.</div>
-            {% endif %}
-        </div>
-        {{ form.username.errors }}
-    </div>
-
-    <div class="form-group {% if form.email.errors %}has-error{% endif %}">
-        <label>Email:</label>
-        <div>
-            {{ form.email }}
-        </div>
-        {{ form.email.errors }}
-    </div>
-
-    <div class="form-group {% if form.password1.errors or form.password2.errors %}has-error{% endif %}">
-        <label>Create a password:</label>
-        <div>
-            <span>
-                {{ form.password1 }}
-            </span>&nbsp;
-            <span>
-                {{ form.password2 }}
-            </span>
-        </div>
-        {% if form.password1.errors or form.password2.errors %}
-            <ul class="errorlist">
-                <li>Please enter your password twice.</li>
-            </ul>
-        {% endif %}
-    </div>
-
-    <div class="form-group  {% if form.referred_by.errors %}has-error{% endif %}">
-        <label>How did you hear about Mediathread?</label>
-        <div>
-            {{ form.referred_by }}
-        </div>
-        {{ form.referred_by.errors }}
-    </div>
-
-    <div class="form-group">
-        <label class="control-label optional">Reasons for your interest in Mediathread?</label>
-        <div>
-            {{ form.user_story }}
-        </div>
-    </div>
-
-    <div style="text-align: center">
-    <input class="btn btn-primary btn-large right" type="submit"
-     id="submit-id" value="{% trans 'Sign up!' %}" />
-    </div>
-</form>
-
+    </form>
+{% endif %}    
 {% endblock %}
