Instructor Dashboard basics - PMT #105469
* Each dashboard view (e.g. settings, sources) now has an absolute url
  containing the course ID
* The "Manage" menu will change to an "Instructor Dashboard" link with
  the instructor_dashboard flag enabled.

The Instructor Dashboard page itself if plain so far - just linking out
to the various functionality. I'll clean this up in future PRs.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4362,3 +4362,7 @@ a.btn.btn-default img.left {
     background-color: white;
     color: #337ab7;
 }
+
+.instructor-dashboard-sidebar.affix {
+    position: fixed;
+}
