--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -95,27 +95,34 @@
                             </li>
 
                             {% if role_in_course == 'instructor' %}
-                            <li>
-                                <div class="settings_menu manage closed">
-                                    <div class="right ui-icon-reverse ui-icon-triangle-1-s"></div>
-                                    <div class="left settings_menu_title">Manage</div>
-                                </div>
-                                <div class="visualclear"></div>
-                                <!-- Settings Menu -->
-                                <div class="settings_submenu" style="display: none">
-                                    <a href="/dashboard/settings/">Settings</a>
-                                    <a href="/dashboard/sources/">Sources</a>
-                                    <a href="/dashboard/migrate/">Migrations</a>
-                                    <a href="/taxonomy/">Vocabulary</a>
-                                    {% flag "roster_view" %}
-                                        <a href="/dashboard/roster/">Roster</a>
+                                <li>
+                                    {% flag 'instructor_dashboard' %}
+                                    <a href="{% url 'course-instructor-dashboard' course.pk %}">
+                                        Instructor Dashboard
+                                    </a>
+                                    {% else %}
+                                    <div class="settings_menu manage closed">
+                                        <div class="right ui-icon-reverse ui-icon-triangle-1-s"></div>
+                                        <div class="left settings_menu_title">Manage</div>
+                                    </div>
+                                    <div class="visualclear"></div>
+                                    <!-- Settings Menu -->
+                                    <div class="settings_submenu" style="display: none">
+                                        <a href="{% url 'course-dashboard-settings' course.pk %}">Settings</a>
+                                        <a href="{% url 'course-dashboard-sources' course.pk %}">Sources</a>
+                                        <a href="{% url 'course-dashboard-migrate' course.pk %}">Migrations</a>
+                                        <a href="{% url 'taxonomy-workspace' %}">Vocabulary</a>
+                                        {% flag "roster_view" %}
+                                        <a href="{% url 'course-roster' course.pk %}">Roster</a>
+                                        {% endflag %}
+
+                                        {% if user.is_staff %}
+                                            <hr />
+                                            <a href="/dashboard/delete/materials/">Materials</a>
+                                        {% endif %}
+                                    </div>
                                     {% endflag %}
 
-                                    {% if user.is_staff %}
-                                        <hr />
-                                        <a href="/dashboard/delete/materials/">Materials</a>
-                                    {% endif %}
-                                </div>
                             </li>
                             <li>
                                 <div class="settings_menu reports closed">
