--- a/mediathread/templates/dashboard/class_settings.html
+++ b/mediathread/templates/dashboard/class_settings.html
@@ -59,7 +59,7 @@
         <h3>Homepage "From Your Instructor" Title</h3>
         <p>This feature allows faculty to customize the left-hand column title on the Mediathread homepage.
         Titles should be less than 25 characters long.</p>
-        <form action="{% url 'course-settings' %}" name="course-information-title-form" method="POST">
+        <form action="{% url 'course-dashboard-settings' course.pk %}" name="course-information-title-form" method="POST">
             <input class="form-control" type="text" name="course_information_title" value="{{course_information_title}}" />
             <br />
             <input class="btn btn-default right" type="submit" value="Save Title"></input>
@@ -71,7 +71,7 @@
     <h3>"Publish To The World" Compositions</h3>
     <p>This feature allows authors to publish compositions at
     a public level, via a link that does not require logging into Mediathread.</p>
-        <form action="{% url 'course-settings' %}" method="POST">
+        <form action="{% url 'course-dashboard-settings' course.pk %}" method="POST">
             <h4 style="display: inline">Enabled:</h4>&nbsp;&nbsp;
             <label>
                 <input type="radio" name="allow_public_compositions" id="allow_public_compositions_yes" value="1" {% if allow_public_compositions %}checked{% endif %} /> Yes
@@ -91,7 +91,7 @@
         collections views. Students can still view an item or selection embedded
         in a visible composition. Faculty always can view all items and selections.</p>
 
-        <form action="{% url 'course-settings' %}" method="POST">
+        <form action="{% url 'course-dashboard-settings' course.pk %}" method="POST">
             <h4 style="display: inline">Course members can see each other's items</h4>: &nbsp;
             <label>
             <input type="radio" name="item_visibility" id="item_visibility_yes" value="1" {% if item_visibility %}checked{% endif %} /> Yes
@@ -133,11 +133,14 @@
                 </ol>
             {% endif %}
 
-            <input type="hidden" name="next" value="{% url 'course-settings' %}" />
+            <input type="hidden" name="next" value="{% url 'course-dashboard-settings' course.pk %}" />
             <input type="hidden" name="group" value="{{course.group.id}}" />
             <input type="hidden" name="faculty_group" value="{{course.faculty_group.id}}" />
             <div><input class="btn btn-default" type="submit" value="Save"></input></div>
         </form>
         <div class="visualclear"></div>
+    </div>
+    <div class="col-md-3" role="complementary">
+        {% include 'main/course_instructor_dashboard_menu.html' %}
     </div>
 {% endblock %}
