use https for youtube urls

--- a/mediathread/templates/dashboard/addsource_advanced_documentation.html
+++ b/mediathread/templates/dashboard/addsource_advanced_documentation.html
@@ -32,7 +32,7 @@
           <dt>ogg</dt><dd></dd>
           <dt>mp3</dt><dd></dd>
           <dt>image_fpx</dt><dd></dd>
-          <dt>youtube</dt><dd>An embeddable YouTube video link.  Should be of the form http://www.youtube.com/v/ul1DoaY6bRE?enablejsapi=1&fs=1</dd>
+          <dt>youtube</dt><dd>An embeddable YouTube video link.  Should be of the form https://www.youtube.com/v/ul1DoaY6bRE?enablejsapi=1&fs=1</dd>
           <dt></dt><dd></dd>
 
         </dl>
