--- a/mediathread/templates/dashboard/class_manage_sources.html
+++ b/mediathread/templates/dashboard/class_manage_sources.html
@@ -158,9 +158,9 @@
             <h3>YouTube Video</h3>
             <form action="{% url 'asset-save' %}" method="POST">
             {% include "assetmgr/pretender_select.html" %}
-            YouTube View (Watch) URL: <input type="text" name="url" value="" /> (example: http://www.youtube.com/watch?v=MjdEEwzskck)
+            YouTube View (Watch) URL: <input type="text" name="url" value="" /> (example: https://www.youtube.com/watch?v=MjdEEwzskck)
             <br/>
-            YouTube Video URL: <input type="text" name="youtube" value="" /> (example: http://www.youtube.com/v/MjdEEwzskck&hl=en_US&fs=1)
+            YouTube Video URL: <input type="text" name="youtube" value="" /> (example: https://www.youtube.com/v/MjdEEwzskck&hl=en_US&fs=1)
             <br/>
             YouTube Title: <input type="text" name="title" value="" />
             <br/>
