--- a/mediathread/templates/registration/description.html
+++ b/mediathread/templates/registration/description.html
@@ -4,6 +4,6 @@
     <br />
 
     <div style="display: inline">
-        <iframe style="border: 1px solid black" width="560" height="315" src="http://www.youtube.com/embed/NWNxuJ0MK3k" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border: 1px solid black" width="560" height="315" src="https://www.youtube.com/embed/NWNxuJ0MK3k" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
