Fix rotated panel labels in IE

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -1008,6 +1008,7 @@ table#sliding-content-container tr td.panhandle-stripe div.label {
     -webkit-transform:rotate(90deg);
     -moz-transform:rotate(90deg);
     -o-transform: rotate(90deg);
+    transform: rotate(90deg);
     white-space:nowrap;
     display:block;
     font-size:12px;
