:arrow_up: flowplayer 5.5.2

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -12,7 +12,7 @@
         {% bootstrap_javascript %}
         <script type="text/javascript" src='{% static "jquery/js/jquery-ui.min.js" %}'></script>
         <script src="{% static 'js/mustache/mustache.min.js' %}"></script>
-        <script src="{{STATIC_URL}}js/flowplayer/flowplayer-5.5.0.min.js"></script>
+        <script src="{{STATIC_URL}}js/flowplayer/flowplayer.min.js"></script>
 
         <script type="text/javascript" src="{% static 'js/lib/sherdjs/lib/OpenLayers-min.js' %}"></script>
         <script type="text/javascript" src="/jsi18n"></script>
