--- a/mediathread/templates/assetmgr/asset_embed_view.html
+++ b/mediathread/templates/assetmgr/asset_embed_view.html
@@ -3,7 +3,7 @@
 <html lang="en" style="height: auto;">
 <head>
     <script type="text/javascript" src="{% static 'jquery/js/jquery-1.12.3.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/flowplayer/flowplayer-5.5.0.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/flowplayer/flowplayer.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/lib/sherdjs/lib/OpenLayers-min.js' %}"></script>
     <script type="text/javascript" src="/jsi18n"></script>
 
