--- a/mediathread/templates/homepage.html
+++ b/mediathread/templates/homepage.html
@@ -6,15 +6,6 @@
     Home
 {% endblock %}
 
-{% block css %}
-    <link rel="stylesheet" href="{{STATIC_URL}}jquery/css/jquery.websitetour.css" media="screen" />
-{% endblock %}
-
-{% block js %}
-    <script type="text/javascript" src="{{STATIC_URL}}jquery/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="{{STATIC_URL}}jquery/js/jquery.websitetour.js"></script>
-{% endblock %}
-
 {% block uncompressable_js %}
     <script type="text/javascript">
         jQuery(document).ready(function() {
@@ -29,9 +20,6 @@
             {% ifequal msg "upload" %}
                 var msg = "Your media file submission is being processed.\nYou will receive an e-mail when it is ready."
                 showMessage(msg);
-            {% else %}{% if show_tour %}
-                jQuery(window).trigger('tour.start');
-            {% endif %}
             {% endifequal %}
 
             jQuery("a.arrow").click(function(evt) {
@@ -80,7 +68,6 @@
     <!-- Settings Menu -->
     <div class="settings_submenu" style="display: none">
          <a href="/help/">Knowledge Base</a>
-         <a href="#" onclick="jQuery(window).trigger('tour.start');">Homepage Tour</a>
          <a href="/upgrade/">Upgrade Bookmarklet</a>
     </div>
 {% endblock %}
@@ -105,34 +92,12 @@
                 {% with "help_homepage_instructor_column" as help_id %}
                 {% include "help/help_contentarea.html" %}
                 <div class="column-container">
-                   <h2 class="tour_1">
+                   <h2>
                         {{information_title}}
                         <div class="actions">{% include "help/help_button.html" %}</div>
                    </h2>
                    <div class="column-contents">
                         <div id="instructor-column">
-                            <div id="tour_1_content" style="display: none">
-                                <p>
-                                    {% if is_faculty %}
-                                        Review and edit compositions you have saved for the whole class (such as a syllabus,
-                                        a list of resources or model compositions) here.
-                                        If you have created a discussion topic, links to the discussion appear here.
-                                    {% else %}
-                                        Review information posted by your instructor such as course materials and syllabus here.
-                                        If your instructor has created a class discussion, you can respond to discussion posts in this area.
-                                    {% endif %}
-                                </p>
-                                <p>
-                                    <i>
-                                        For detailed help, click the question mark icon associated with each section or the <b>Help</b> link in the upper right corner.
-                                    </i>
-                                </p>
-
-                                <div class="tour_buttons">
-                                    <span class="btn btn-default" id="nextstep" style="">Next &gt;</span>
-                                    <span class="close ui-icon ui-icon-closethick" id="canceltour"></span>
-                                </div>
-                            </div>
 
                             {% if faculty_feed|length %}
                                 <h4 class="inst-header information">
@@ -186,36 +151,10 @@
                 {% include "help/help_contentarea.html" %}
 
                 <div class="column-container parent-column-container">
-                    <h2 class="tour_2">
+                    <h2>
                         Compositions &amp; Assignments
                         <div class="actions">{% include "help/help_button.html" %}</div>
                     </h2>
-                    <div id="tour_2_content" style="display: none">
-                        <p>
-                            {% if is_faculty %}
-                                Create and view compositions, assignments, and instructor feedback here.
-                                Use the <b>Author</b> field to view shared work from an individual student
-                                by choosing his or her name in the drop down menu. Use the <b>Create</b>
-                                button to begin new assignments and course information.
-                            {% else %}
-                                Respond to assignments posted by your instructor, review instructor feedback, and
-                                create compositions here. View compositions shared by other class members by
-                                choosing his or her name in the <b>Author</b> drop down menu. Use the <b>Create</b>
-                                button to begin new compositions or respond to assignments.
-                            {% endif %}
-                        </p>
-                        <p>
-                           <i>
-                            For detailed help, click the question mark icon associated with each section or the <b>Help</b> link in the upper right corner.
-                           </i>
-                        </p>
-
-                        <div class="tour_buttons">
-                            <span class="button" id="prevstep" style="">&lt; Prev</span>
-                            <span class="button" id="nextstep" style="">Next &gt;</span>
-                        </div>
-                        <span class="close ui-icon ui-icon-closethick" id="canceltour"></span>
-                    </div>
                     <div class="ajaxloader">
                         <div class="message">
                         <img alt="Loading..." src="/media/img/ajax-loader.gif">
@@ -234,33 +173,13 @@
                 {% include "help/help_contentarea.html" %}
 
                 <div class="column-container">
-                    <h2 class="tour_3">Collection<div class="actions">{% include "help/help_button.html" %}</div></h2>
+                    <h2>Collection<div class="actions">{% include "help/help_button.html" %}</div></h2>
                     <a class="btn btn-default collection right" href="/asset/">
                         <img src="{{STATIC_URL}}img/viewfullcollection.png"
                             alt="view full collection icon" />
                                 View Full Collection
                     </a>
 
-                    <div id="tour_3_content" style="display: none">
-                        <p>
-                            A collection is a set of images, video and/or audio brought into Mediathread that
-                            can be annotated, organized, and embedded into essays and other written analysis.
-                        </p>
-                        <p>
-                           <i>
-                            For detailed help, click the question mark icon associated with each section or the <b>Help</b> link in the upper right corner.
-                           </i>
-                        </p>
-
-                   <div class="tour_buttons">
-                        <span class="button" id="prevstep" style=""> &lt; Prev</span>
-                        <span class="button start" id="nextstep"
-                            onclick="updateUserSetting('{{request.user.username}}', 'help_show_homepage_tour', false);">
-                            Get Started &gt;
-                        </span>
-                        <span class="close ui-icon ui-icon-closethick" id="canceltour"></span>
-                    </div>
-                    </div>
                 <div class="visualclear"></div>
                 <br />
                 <div class="collection_content">
