constrain regex replacement to the beginning of the string

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -275,7 +275,7 @@
                 if (BrowserDetect.browser === 'Safari' &&
                         window.location.protocol !== 'https:') {
                     window.location =
-                        window.location.href.replace('http://', 'https://');
+                        window.location.href.replace(/^http:\/\//, 'https://');
                 }
 
                 jQuery("div.settings_menu").click(function(evt) {
