Basic Course Dashboard - PMT #105469
The "Manage" menu will change to an "Instructor Dashboard" link with the
instructor_dashboard flag enabled.

The Instructor Dashboard page itself if plain so far - just linking out
to the various dashboard pages. I'll extend it in future PRs.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -96,6 +96,11 @@
 
                             {% if role_in_course == 'instructor' %}
                             <li>
+                                {% flag 'instructor_dashboard' %}
+                                <a href="{% url 'course-instructor-dashboard' course.pk %}">
+                                    Instructor Dashboard
+                                </a>
+                                {% else %}
                                 <div class="settings_menu manage closed">
                                     <div class="right ui-icon-reverse ui-icon-triangle-1-s"></div>
                                     <div class="left settings_menu_title">Manage</div>
@@ -108,7 +113,7 @@
                                     <a href="/dashboard/migrate/">Migrations</a>
                                     <a href="/taxonomy/">Vocabulary</a>
                                     {% flag "roster_view" %}
-                                        <a href="/dashboard/roster/">Roster</a>
+                                    <a href="/dashboard/roster/">Roster</a>
                                     {% endflag %}
 
                                     {% if user.is_staff %}
@@ -116,6 +121,7 @@
                                         <a href="/dashboard/delete/materials/">Materials</a>
                                     {% endif %}
                                 </div>
+                                {% endflag %}
                             </li>
                             <li>
                                 <div class="settings_menu reports closed">
