--- a/mediathread/templates/djangosherd/annotator_resources_css.html
+++ b/mediathread/templates/djangosherd/annotator_resources_css.html
@@ -22,4 +22,4 @@
        width:25px;
     }
   </style>
-  <link rel="stylesheet" href="{{STATIC_URL}}flowplayer/flowplayer.minimalist.css">
+  <link rel="stylesheet" href="{{STATIC_URL}}flowplayer/minimalist.css">
