Course Dashboard Settings view - PMT #106652

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -97,7 +97,7 @@
                             {% if role_in_course == 'instructor' %}
                             <li>
                                 {% flag 'instructor_dashboard' %}
-                                <a href="{% url 'course-instructor-dashboard' course.pk %}">
+                                <a href="{% url 'instructor-dashboard' course.pk %}">
                                     Instructor Dashboard
                                 </a>
                                 {% else %}
