--- a/mediathread/templates/main/instructor_dashboard.html
+++ b/mediathread/templates/main/instructor_dashboard.html
@@ -11,7 +11,8 @@
 
 {% block content %}
     <div class="col-md-9" role="main">
-        <h2><a href="/dashboard/settings/">Settings</a></h2>
+        <h2><a href="{% url 'instructor-dashboard-settings' object.pk %}"
+            >Settings</a></h2>
         <h2><a href="/dashboard/sources/">Sources</a></h2>
         <h2><a href="/dashboard/migrate/">Migrations</a></h2>
         <h2><a href="/taxonomy/">Vocabulary</a></h2>
