Change placeholder from Search to Filter

--- a/mediathread/templates/courseaffils/course_list.html
+++ b/mediathread/templates/courseaffils/course_list.html
@@ -69,7 +69,7 @@
                type="search"
                data-column="all"
                autofocus
-               placeholder="Search">
+               placeholder="Filter">
     </form>
 
     {% if semester_view == 'past' %}
