--- a/mediathread/templates/main/course_list.html
+++ b/mediathread/templates/main/course_list.html
@@ -64,7 +64,7 @@
                type="search"
                data-column="all"
                autofocus
-               placeholder="Search">
+               placeholder="Filter">
     </form>
 
     {% if semester_view == 'past' %}
