Add reset button to course settings page - PMT #106653
This feature won't be visible until I implement the has_student_activity
function which I've stubbed out.

--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -31,6 +31,13 @@
                 </ol>
             {% endif %}
         </div>
-        {% buttons submit='Save' %}{% endbuttons %}
+        <div class="form-group">
+            <button class="btn btn-primary" type="submit">Save</button>
+            {% if not has_student_activity %}
+                <button class="btn" type="submit" name="reset" value="true">
+                    Reset to default
+                </button>
+            {% endif %}
+        </div>
     </form>
 {% endblock %}
