Instructor Dashboard -> Course Settings

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -98,7 +98,7 @@
                             <li>
                                 {% flag 'instructor_dashboard' %}
                                 <a href="{% url 'instructor-dashboard' %}">
-                                    Instructor Dashboard
+                                    Course Settings
                                 </a>
                                 {% else %}
                                 <div class="settings_menu manage closed">
