--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load bootstrap3 %}
 
-{% block title %}&mdash; Course Settings{% endblock %}
+{% block title %}&mdash; General{% endblock %}
 
 {% block content %}
-    <h2>Course Settings</h2>
+    <h2>Course Settings: General</h2>
     <form action="" method="post">{% csrf_token %}
         {% bootstrap_field form.title form_group_class='form-group well' %}
         {% bootstrap_field form.homepage_title form_group_class='form-group well' %}
