Add warning when navigating out of unsaved course settings page

--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -5,6 +5,7 @@
 
 {% block content %}
     <h2>Course Settings: General</h2>
+    {{ form.media }}
     <form action="" method="post">{% csrf_token %}
         {% bootstrap_field form.title form_group_class='form-group well' %}
         {% bootstrap_field form.homepage_title form_group_class='form-group well' %}
