--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -66,7 +66,7 @@
                             {% if role_in_course == 'instructor' %}
                             <li>
                                 {% flag 'instructor_dashboard' %}
-                                <a href="{% url 'instructor-dashboard' %}">
+                                <a href="{% url 'course-settings-general' %}">
                                     Course Settings
                                 </a>
                                 {% else %}
