--- a/mediathread/templates/courseaffils/course_update_form.html
+++ b/mediathread/templates/courseaffils/course_update_form.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'dashboard/base_course_dashboard.html' %}
 {% load bootstrap3 %}
 
-{% block title %}&mdash; General{% endblock %}
+{% block title %}{{block.super}}&mdash; Course Settings{% endblock %}
 
-{% block content %}
+{% block dashboard_content %}
     <h2>Course Settings: General</h2>
     {{ form.media }}
     <form action="" method="post">{% csrf_token %}
